--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Awaiken Theme">
-	<!-- Page Title -->
 	<title>Qarshi shahar 48-DMTT web site</title>
 	<!-- Google Fonts css-->
 	<link href="https://fonts.googleapis.com/css?family=Bubblegum+Sans|Roboto:300,400,500,700,900" rel="stylesheet">
@@ -29,7 +28,7 @@
 	<!-- Main custom css -->
 	<link href="css/custom.css" rel="stylesheet" media="screen">
 </head>
-
+ 
 <body data-spy="scroll" data-target="#main-navbar" data-offset="71">
 	<!-- Tob Bar Section Start -->
 	<div class="top-bar">
@@ -78,7 +77,7 @@
 	</header>
 	<!-- Header Section End -->
 	<!-- Banner Slider Section starts -->
-	<div class="banner-slider" id="home">
+	<div class="banner-slider" id="home class">
 		<div class="container-fluid">
 			<div class="row no-gutters">
 				<div class="col-md-12">
@@ -92,7 +91,7 @@
 									</figure>
 									<div class="banner-slide-overlay">
 										<h2 class="color-orange" data-swiper-animation="fadeInDown" data-duration="1s" data-delay="1.5s">
-											Qarshi shahar 48-Davlat maktabgacha ta'lim tashkiloti</h2>
+											Qarshi shaharga 48-Davlat maktabgacha ta'lim tashkiloti</h2>
 										<!-- <a href="#" class="btn-slider" data-swiper-animation="fadeInUp" data-duration="1s"
 											data-delay="2.5s">Enroll Today !</a> -->
 									</div>
