--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 									</figure>
 									<div class="banner-slide-overlay">
 										<h2 class="color-orange" data-swiper-animation="fadeInDown" data-duration="1s" data-delay="1.5s">
-											Qarshi shaharga 48-Davlat maktabgacha ta'lim tashkiloti</h2>
+											Qarshi shahar 48-Davlat maktabgacha ta'lim tashkiloti</h2>
 										<!-- <a href="#" class="btn-slider" data-swiper-animation="fadeInUp" data-duration="1s"
 											data-delay="2.5s">Enroll Today !</a> -->
 									</div>
